tests/ui/errors/snapshots/infer_not_numeric.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:12]
 2 │ fn test() {
 3 │   let x = -true;
   ·            ──┬─
   ·              ╰── expected `int` or `float`, found `bool`
 4 │ }
   ╰────
  help: The negation operator `-` can only be used with `int` or `float` · code: [infer.type_mismatch]
