tests/ui/errors/snapshots/infer_not_orderable.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:4:16]
 3 │   let f = |x: int| x + 1;
 4 │   let result = f > f;
   ·                ┬
   ·                ╰── expected orderable, found `fn (int) -> int`
 5 │ }
   ╰────
  help: Use comparison operators only with numeric, string, or boolean types · code: [infer.type_mismatch]
