tests/ui/errors/snapshots/infer_opposing_mut_params_function_type_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing write permission
    ╭─[test.lis:14:17]
 13 │   let mut b = [2]
 14 │   let _ = apply(advance, a, b)
    ·                 ───┬───
    ·                    ╰── expected `fn (Slice<int>, mut Slice<int>) -> int`, found `fn (mut Slice<int>, Slice<int>) -> int`
 15 │ }
    ╰────
  help: A function value may demand less permission than its type promises, never more. Match `mut` on each differing parameter, or expect `fn (mut Slice<int>, Slice<int>) -> int` instead · code: [infer.needs_writable]
