tests/ui/errors/snapshots/infer_option_does_not_implement_interface.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Interface not implemented
    ╭─[test.lis:12:23]
 11 │ fn test() {
 12 │   let _ = use_greeter(maybe_hello())
    ·                       ──────┬──────
    ·                             ╰── `Option<Hello>` does not implement `Greeter`
 13 │ }
    ╰────
  help: Unwrap the `Option` with `match` or `if let` first · code: [infer.interface_not_implemented]
