tests/ui/errors/snapshots/infer_option_of_concrete_where_option_of_interface_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:16:8]
 15 │   let cat: Option<Cat> = Some(Cat {})
 16 │   take(cat)
    ·        ─┬─
    ·         ╰── expected `Option<Animal>`, found `Option<Cat>`
 17 │ }
    ╰────
  help: Use `.map(|value| value as Animal)` to widen the value · code: [infer.type_mismatch]
