tests/ui/errors/snapshots/infer_or_pattern_binding_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid or-pattern
   ╭─[test.lis:4:10]
 3 │   match opt {
 4 │     Some(x) | None => x,
   ·          ┬
   ·          ╰── only bound here
 5 │   }
   ╰────
  help: Variable x is not bound in all alternatives. Use a wildcard `_` instead of a binding, or ensure all alternatives bind the same variable · code: [infer.or_pattern_binding_mismatch]
