tests/ui/errors/snapshots/infer_or_pattern_in_let_binding.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid or-pattern
   ╭─[test.lis:3:7]
 2 │ fn test(x: int) {
 3 │   let 1 | 2 = x;
   ·       ──┬──
   ·         ╰── or-patterns are not allowed here
 4 │ }
   ╰────
  help: Use a `match` expression instead. Or-patterns can only be used in `match`, `if let`, and `while let` · code: [infer.or_pattern_in_irrefutable]
